MCKIN-9854 Fixed tooltips on IE and Edge (#2607)
* MCKIN-9854 Fixed tooltips on IE and Edge

* removed wrong code

--- a/static_v2/scss/_biapp.scss
+++ b/static_v2/scss/_biapp.scss
@@ -658,6 +658,11 @@ footer {
 // CSS specific styles
 body.rtl {
   text-align: right;
+  .my-courses{
+    .bookmark{
+      background-position-x: left;
+    }
+  }
   .bookmark {
     @include flip-x-axis;
   }
